@@ -502,3 +502,4 @@ N(OP_GuildStatus),
 N(OP_BuffRemoveRequest),
 N(OP_CorpseDrag),
 N(OP_CorpseDrop),
+N(OP_ChangeSize),
