@@ -1792,7 +1792,7 @@ ENCODE(OP_SomeItemPacketMaybe) {
 	OUT(target_id);
 	OUT(item_id);
 
-	eq->unknown070 = 175; // This needs to be set to something, else we get a 1HS animation instead of ranged.
+	eq->unknown070 = 135; // This needs to be set to something, else we get a 1HS animation instead of ranged.
 
 	OUT(item_type);
 	OUT(skill);
@@ -2542,6 +2542,35 @@ ENCODE(OP_BuffCreate)
 	}
 	ss.write((const char*)&write_var8, sizeof(uint8));
 	*/
+}
+
+ENCODE(OP_SpawnAppearance)
+{
+	EQApplicationPacket *in = *p;
+	*p = NULL;
+
+	unsigned char *emu_buffer = in->pBuffer;
+
+	SpawnAppearance_Struct *sas = (SpawnAppearance_Struct *)emu_buffer;
+
+	if(sas->type != AT_Size)
+	{
+		dest->FastQueuePacket(&in, ack_req);
+		return;
+	}
+	
+	EQApplicationPacket *outapp = new EQApplicationPacket(OP_ChangeSize, sizeof(ChangeSize_Struct));
+
+	ChangeSize_Struct *css = (ChangeSize_Struct *)outapp->pBuffer;
+
+	css->EntityID = sas->spawn_id;
+	css->Size = (float)sas->parameter;
+	css->Unknown08 = 0;
+	css->Unknown12 = 1.0f;
+
+	dest->FastQueuePacket(&outapp, ack_req);
+	
+	delete in;
 }
 
 DECODE(OP_BazaarSearch)
