@@ -71,6 +71,7 @@ E(OP_DzJoinExpeditionConfirm)
 E(OP_TargetBuffs)
 E(OP_BuffCreate)
 E(OP_RespondAA)
+E(OP_SpawnAppearance)
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
 D(OP_CharacterCreate)
