@@ -80,6 +80,7 @@ OP_PreLogoutReply=0x0000			#
 
 # Required to fully log in
 OP_SpawnAppearance=0x3e17			# V
+OP_ChangeSize=0x6942				#
 OP_TributeUpdate=0x684c				# V
 OP_TributeTimer=0x4895				# C
 OP_TaskDescription=0x156c			# C
